@@ -9,10 +9,11 @@ If you have it on, turn it *off* if you can.
 *
 
 === New features in 1.1 ===
-*(bug 64) Hooks added to HTTP class
+* (bug 64) Hooks added to HTTP class
+* 'colorized' option added to Diff function
 
 === Bug fixes in 1.1 ===
-*
+* (bug 63) Check if it is a read only wiki before running wikiChecks
 
 == Compatibility ==
 
